--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -96,7 +96,7 @@ function start(){
 		ctx.fillText("IL EST",300,235); 
 		ctx.fillText("TEMPS DE",300,295);
 
-		ctx.font="65px Apercu Pro"; 
+		ctx.font="bold 65px Apercu Pro"; 
 		
 		ctx.fillStyle= "white";
 		ctx.textAlign="center"; 
