--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -182,5 +182,5 @@ function start(){
 </body>
 <div style="text-align: center;">
 <a href="https://www.sandrinerousseau.fr/">
-<img id="logo" width="200" height="110" src="https://www.zupimages.net/up/20/50/vi6m.png" alt="Logo"></a></div>
+<img id="logo" width="200" height="110" src="logo.png" alt="Logo"></a></div>
 </html>
