--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -181,8 +181,8 @@ function start(){
 		</div>
 </body>
 <div style="text-align: center;">
-<a href="canvasimage">
-<img id="bouton-download" src="Bouton-télécharger.png" alt="Télécharger"></a></div>
+<a href="canvasimage.PNG">
+<img id="bouton-download" src="bouton.png" alt="Télécharger"></a></div>
 <div style="text-align: center;">
 <a href="https://www.sandrinerousseau.fr/">
 <img id="logo" width="200" height="110" src="logo.png" alt="Logo"></a></div>
