--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -181,9 +181,6 @@ function start(){
 		</div>
 </body>
 <div style="text-align: center;">
-<a href="canvasimage.PNG">
-<img id="bouton-download" src="https://raw.githubusercontent.com/Alex-le-vert/Generateur-SR/main/bouton.png" alt="Télécharger"></a></div>
-<div style="text-align: center;">
 <a href="https://www.sandrinerousseau.fr/">
-<img id="logo" width="200" height="110" src="https://raw.githubusercontent.com/Alex-le-vert/Generateur-SR/main/logo.png" alt="Logo"></a></div>
+<img id="logo" width="200" height="110" src="logo.png" alt="Logo"></a></div>
 </html>
