--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -10,8 +10,8 @@
 
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
-		<script src="https://cdn.jsdelivr.net/npm/js-base64@3.6.0/base64.min.js"></script>
-		<script src="https://github.com/hongru/canvas2image/blob/master/canvas2image.js" type="text/javascript"></script>
+		<script src="base64.js"></script>
+		<script src="canvas2image.js" type="text/javascript"></script>
 		<script src="https://github.com/Alex-le-vert/Generateur-SR/blob/main/Apercu%20Pro%20Black.otf" type="font"></script>
 
 	</head>
