--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -174,7 +174,7 @@ function start(){
 			<input maxlength="16" class="line2 transition" type="text" placeholder="les politiques" />
 		</form>
 
-		<a class="dl" href="#" onClick="dl()"><img src="dl.png"/></a>
+		<a class="dl" href="#" onClick="dl()"><img src="https://raw.githubusercontent.com/Alex-le-vert/Generateur-SR/main/dl.png"/></a>
 		</div>
 		<div style="text-align: center;">
 	<canvas  width="600" height="600" id="canvas"></canvas>
