--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -9,7 +9,8 @@
 		<link href="css/styles.css" rel="stylesheet" type="text/css">
 
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	  	<script src="base64.js"></script>
+
+		<script src="base64.js"></script>
 		<script src="canvas2image.js" type="text/javascript"></script>
 		<script src="https://github.com/Alex-le-vert/Generateur-SR/blob/main/Apercu%20Pro%20Black.otf" type="font"></script>
 
@@ -173,7 +174,7 @@ function start(){
 			<input maxlength="16" class="line2 transition" type="text" placeholder="les politiques" />
 		</form>
 
-		<a class="dl" href="#">onClick="dl()"<span>📥<span/></a>
+		<a class="dl" href="#" onClick="dl()"><span>📥<span/></a>
 		</div>
 		<div style="text-align: center;">
 	<canvas  width="600" height="600" id="canvas"></canvas>
