--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -154,7 +154,8 @@ function start(){
 	<div class="playground">
 		<form id ="generator">
 		<div style="text-align: center;">
-       Il est temps de
+			<span>Il est</span> 
+			<span>temps de</span>
 			<input maxlength="16" class="line1 transition" type="text" placeholder="changer"/>
 			<input maxlength="16" class="line2 transition" type="text" placeholder="les politiques" />
 		</form>
