--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -6,7 +6,7 @@
 
 		<title>Générateur : Il est temps de...</title>
 		
-		<!--<link href="style.css" rel="stylesheet" type="text/css">-->
+		<link href="style.css" rel="stylesheet" type="text/css">
 
 		<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
