--- a/Generateur SR.html
+++ b/Generateur SR.html
@@ -154,8 +154,7 @@ function start(){
 	<div class="playground">
 		<form id ="generator">
 		<div style="text-align: center;">
-			<div>Il est</div> 
-			<div>temps de</div>
+			<div>Il est temps de</div>
 			<input maxlength="16" class="line1 transition" type="text" placeholder="changer"/>
 			<input maxlength="16" class="line2 transition" type="text" placeholder="les politiques" />
 		</form>
